# llm-router

./: .env.example  .gitignore  CLAUDE.md  README.md  llm-router-impl-plan.md  llm-router-product-features.md  llm-router-requirements-analysis.md
core/: generate_test_data.py  pyproject.toml  pytest.ini  requirements.txt
core/migrations/versions/: 001_init.py  002_add_model_priority_weight.py
core/scripts/: analyze_remaining_stages.py  dev.sh  final_verification_report.md  init_db.py  install_test_deps.sh  migrate_model_priority_weight.py  run_tests.sh  simple_verify.py  stage0_verification.py  stage2_routing_verification.py  stage3_stage4_verification_report.md  stage5_stage7_verification_report.md  start.sh  test_basic.py  test_core.py  test_summary.sh  verify_model_priority_weight.py  verify_stage2.py  verify_stage3.py  verify_stage3_load_balancing.py  verify_stage3_simple.py  verify_stage4.py  verify_stage4_cost_optimizer.py  verify_stage4_simple.py  verify_stage5.py  verify_stage5_security.py  verify_stage6_monitoring.py
core/src/: main.py
core/src/agents/: advanced_routing.py  content_analyzer.py  cost_agent.py  cost_optimizer.py  failover.py  gateway_orchestrator.py  load_balancer.py  monitoring.py  provider_agent.py  routing_agent.py  security_engine.py
core/src/api/: middleware.py
core/src/api/v1/: analytics.py  chat.py  cost.py  providers.py  router.py
core/src/config/: redis_config.py  settings.py
core/src/db/: base.py  session.py
core/src/providers/: anthropic.py  base.py  factory.py  openai.py  token_counter.py
core/src/schemas/: chat.py  cost.py  provider.py  router.py
core/src/services/: cache.py  cost_calculator.py  redis_client.py
core/src/utils/: encryption.py  logging.py
core/tests/: conftest.py  helpers.py
core/tests/integration/: test_chat_api.py
core/tests/unit/: test_agents.py  test_api.py  test_models.py  test_providers.py
doc/: README.md  llm-router-impl-plan.md  llm-router-system-design.md  llm-router-value-roadmap.md  stage0-test-plan.md
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose-cn.yml  docker-compose-ghcr.yml  docker-compose.yml  nginx.conf
docs/: access-guide.md
frontend/: index.html  package-lock.json  package.json  test.html
frontend/scripts/: verify_stage7.py
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ApiKeyModal.tsx  ChatTestTool.tsx  CostChart.tsx  Layout.tsx  RouterControlPanel.tsx  StatCard.tsx
frontend/src/hooks/: useChat.tsx  useConfig.tsx  useDashboardData.tsx
frontend/src/types/: index.ts
scripts/: test_stage1.sh
tests/unit/: test_streaming.py
(+9 files in other folders)
